--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 
   <meta charset='UTF-8'>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="shortcut icon" href="img/website.ico">
-  <meta name="description" content="YourDescriptionHere">
-  <meta name="author" content="YourStudentID">
+  <link rel="shortcut icon" href="img/guccibee.ico">
+  <meta name="description" content="Professional economic adivsor">
+  <meta name="author" content="862308325">
 
-  <title>John Doe - Business Administration</title>
+  <title>David Sanchez Cano - Business Economics</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -27,9 +27,9 @@
 <body id="page-top">
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none">John Doe</span>
+      <span class="d-block d-lg-none">David Sanchez Cano</span>
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profilepicture.png" alt="Profile Picture">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/DavidSanchezCano.jpg" alt="Profile Picture">
       </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -58,26 +58,26 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-3">John Doe
+        <h1 class="mb-3">David Sanchez Cano
         </h1>
-        <div class="subheading mb-5">Business Administration📚</div>
-        <p class="lead mb-4">Enter bio here<br><br>
+        <div class="subheading mb-5">Business Economics📚</div>
+        <p class="lead mb-4">My name is David Sanchez Cano. I was born in Puebla, Mexico and moved to the United States when I was three. I was raised in Los Angeles ever since. My parents taught me the importance of hard work at a young age. This work ethic has helped me at young age. I was constantly praised for being a good student by my elementary, middle, and high school teachers. <br><br>
 
-        Enter bio here<br><br>
+        After graduating high school with a 4.04 I had to choose between UC Santa Barbara and UC Riverside. I decided to go to UC Riverside because that means I will still be able to visit my family. Choosing a major was also difficult. I knew that English was not my best field. In that case, I decided to steer away from majors that would require a lot of reading/writing. My favortite subject was math. However, I did not have a good experience with science classes so I wasn't sure if a STEM major was for me. <br><br>
 
-        Enter bio here
+        I decided to pick the major of Business Economics. I have learned a lot about economics in my first year at UC Riverside. I had really good professors for Macroeconomics and Microeconomics. A career that caught my attention was the work that was done in the Federal Reserve System and the United States Department of Treasury. Being an economic advisor to help a small town, city, state, or the entite contry was awe inspiring. 
         </p>
         <div class="social-icons">
-          <a target="_blank" id="socialicon-1" href="https://linkedin.com">
+          <a target="_blank" id="socialicon-1" href="https://app.joinhandshake.com/stu/users/31535607">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a target="_blank" id="socialicon-2" href="https://github.com">
+          <a target="_blank" id="socialicon-2" href="https://github.com/DavidSanchezCano">
             <i class="fab fa-github"></i>
           </a>
-          <a target="_blank" id="socialicon-3" href="https://twitter.com">
+          <a target="_blank" id="socialicon-3" href="https://www.instagram.com/davvy_jetski/">
             <i class="fab fa-twitter"></i>
           </a>
-          <a target="_blank" id="socialicon-4" href="mailto:youremail@gmail.com">
+          <a target="_blank" id="socialicon-4" href="mailto:dsanc195@ucr.edu">
             <i class="fa fa-envelope"></i>
           </a>
         </div>
@@ -92,48 +92,47 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Developer</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://yourcompany.com">Company</a></div>
+            <h3 class="mb-0">Student Assistant</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://dining.ucr.edu/">UCR Dining Services</a></div>
             <p>
-              • Developed websites for company X<br> 
-              • Speaker at hack-a-thons<br>
-              • Experience with HTML, CSS, Javascript, Photoshop<br>
+              • Restocked food at dining stations<br> 
+              • Maintained a clean environment at dining areas<br>
+              • Washed dishes<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2019 - Present</span>
+            <span class="text-primary">October 2021 - Present</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Cashier</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://wholefoods.com">Whole Foods</a></div>
+            <h3 class="mb-0">Student Volunteer</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://vbgc.org/">Variety Boys & Girls Club</a></div>
             <p>
-              • Responsible for checking out customers<br>
-              • etc etc<br>
+              • Chaperoned children at various activity spots<br>
+              • Helped tutor kids with their homework<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2017 - March 2019</span>
+            <span class="text-primary">June 2019 - August 2019</span>
           </div>
         </div>
 
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Teaching Assistant</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">University of California Riverside</a></div>
+            <h3 class="mb-0">Tutor</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://bravomedhs-lausd-ca.schoolloop.com/">Francisco Bravo Medical Magnet</a></div>
             <p>
-            • Ran sessions to help students learn how to code<br>
-            • Reviewed and graded student coding projects<br>
-            • Created educational content to help promote student education<br>
-            • TA'd for over 400 students each academic quarter<br>
+            • Held sessions to help peers prepare for AP Calculus AB exam<br>
+            • Held study sessions<br>
+            • Also taught Algebra 1 & 2, Geometry, and Precalculus<br>
 
           </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">January 2011 - January 2016</span>
+            <span class="text-primary">August 2020 - May 2021</span>
           </div>
         </div>
 
@@ -152,33 +151,11 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
           <div class="resume-content">
             <h3 class="mb-0">UC Riverside</h3>
-            <div class="subheading mb-3">Masters of Business Administration</div>
-            <div>MBA in International Business</div>
+            <div class="subheading mb-3">Business Economics</div>
+            <div>Bachelors in Business Economics</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2018 - December 2019</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
-          <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Postgraduate Certificate in Business Management</div>
-            <div>Project Management</div>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">June 2017</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
-          <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Business Administration</div>
-            <div>Information Systems</div>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">August 2012 - May 2016</span>
+            <span class="text-primary">August 2021 - Present</span>
           </div>
         </div>
 
@@ -191,7 +168,10 @@
       <div class="w-100">
         <h2 class="mb-5">Portfolio</h1>
         <center>
-            <img src="img/image2.jpeg" width="500px">
+            <img src="img/graduation (1).jpg" width="500px">
+            <img src="img/work (1).jpg" width="500px"><br>
+            <img src="img/mexico (1).jpg" width="500px">
+            <img src="img/number1 (1).jpg" width="500px"><br>
         </center>
       </div>
     </section>
@@ -199,7 +179,7 @@
     <hr class="m-0">
     <center>&copy; <script type="text/javascript">
   document.write(new Date().getFullYear());
-  </script> John Doe</center><br>
+  </script> David Sanchez Cano</center><br>
   </div>
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
